# snes-online

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  README_PORTABLE.md  README_PORTABLE.txt
.github/: copilot-instructions.md
.github/workflows/: ios-ipa.yml
include/snesonline/: AlignedBuffer.h  AppConfig.h  EmulatorEngine.h  GGPOCallbacks.h  GGPOFwd.h  InputBits.h  InputMapping.h  LibretroCore.h  LockstepSession.h  NetplaySession.h  StunClient.h
platform/android/: CMakeLists.txt  README.md  build.gradle  gradlew  gradlew.bat  native-lib.cpp  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/cores/: README.txt
platform/android/app/src/main/java/com/snesonline/: ConfigActivity.java  GameActivity.java  NativeBridge.java  OnscreenControlsView.java  UiStyle.java
platform/android/app/src/main/res/drawable/: bg_btn_pill.xml  bg_btn_rect.xml  bg_dpad.xml  ic_app_icon.xml  ic_copy.xml  ic_dpad_cross.xml
platform/android/app/src/main/res/layout/: activity_config.xml
platform/android/app/src/main/res/values/: strings.xml  styles.xml
platform/android/app/src/main/res/xml/: network_security_config.xml
platform/ios/: README_IOS.md  SNESOnlineIOSBridge.h  SNESOnlineIOSBridge.mm  SNESOnlineIOSNative.h  SNESOnlineIOSNative.mm  project.yml
platform/ios/app/: Info.plist
platform/ios/app/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/ios/app/Sources/: AppDelegate.swift  IOSConfigViewController.swift  IOSGameViewController.swift  NativeBridgeIOS.swift  OnscreenControlsOverlay.swift  SceneDelegate.swift  SnesOnline-Bridging-Header.h  StateSlotsViewController.swift  UiStyle.swift
platform/windows/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  config_main.cpp  main.cpp  resources.rc  winmain.cpp
scripts/: android_apply_app_icon.ps1  android_generate_controller_style_pngs.ps1  get_snes9x_core.ps1
src/: AlignedBuffer.cpp  AppConfig.cpp  EmulatorEngine.cpp  GGPOCallbacks.cpp  LibretroCore.cpp  LockstepSession.cpp  NetplaySession.cpp  StunClient.cpp
tools/room_server/: README.md  run_room_server.ps1  server.js
